// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Preset Update works as planned:  after setting 2 falls  1`] = `
<div
  className="presetupdater"
>
  {
  "item": {
    "_id": "c1bbbbbbbbbbbbbbbb098765",
    "number": 0,
    "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
    "project": "-",
    "isReady": false,
    "presetModel": {}
  },
  "isReady": false
}
</div>
`;

exports[`Preset Update works as planned:  after setting to true  1`] = `
<div
  className="presetupdater"
>
  {
  "item": {
    "_id": "c1bbbbbbbbbbbbbbbb098765",
    "number": 0,
    "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
    "project": "-",
    "isReady": true,
    "presetModel": {}
  },
  "isReady": true
}
</div>
`;

exports[`Preset Update works as planned: Before anything 1`] = `
<div
  className="presetupdater"
>
  {
  "isReady": false
}
</div>
`;
